<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/txt_nom_principal"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/grdnbtnGenero"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_genero"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rdbtnSexoMasculino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_genero_m" />

        <RadioButton
            android:id="@+id/rdbtnSexoFemenino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_genero_f" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="62dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_tipo_zapato"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_marca"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/sltTipoZapato"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/sltMarcaZapato"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <EditText
        android:id="@+id/txtCantidadZapatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/txt_entrada_cantidad"
        android:inputType="number" />

    <Button
        android:id="@+id/btnCalcularTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="muestragenero"
        android:text="@string/txt_btn_calcular"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold" />

</LinearLayout>